k8s/bff-notes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-notes
  namespace: notes-app
  labels:
    app: bff-notes
spec:
  type: ClusterIP
  selector:
    app: bff-notes
  ports:
    - name: svc-port
      port: 9004
      targetPort: 9004
    - name: admin
      port: 9192
      targetPort: 9192
